scripts/devvpc/k8s/apache/httpd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conexus-httpd-ingress
  namespace: ingress-nginx
  annotations:
    #ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/whitelist-source-range: "199.128.0.0/11"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "2700"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "2700"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: "https://${uiurl}/$1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      #rewrite ^/(.*)$ https://${uiurl}/$1 permanent;
      #more_set_headers "X-Forwarded-For $http_x_forwarded_for";
      more_set_headers "X-Forwarded-For $http_x_forwarded_for" "X-Forwarded-Port 443";
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "https://${uiurl}:80/"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://${uiurl}/"
    #cert-manager.io/cluster-issuer: letsencrypt-prod-sandbox
spec:
  ingressClassName: nginx
  rules:
  - host: ${uiurl}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: conexus-httpd           
              port:
                number: 80
  tls:
  - hosts:
    - "${uiurl}"
    secretName: ${env}${certname}
